--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_PROD_URL=https://gjesteparkering-faa7b9adf6e4.herokuapp.com
+REACT_APP_API_PROD_URL=${API_PROD_URL}
 REACT_APP_API_DEV_URL=http://localhost:8080
