--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build "
+    "heroku-postbuild": "npm install && npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
