--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts build && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build && serve -s build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "18.14.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
